# winbluetooth-rs

./: Cargo.toml  README.md
src/: lib.rs  macros.rs
src/shared/: bthdef.rs  bthioctl.rs  bthsdpdef.rs
src/um/: bluetoothapis.rs  bluetoothleapis.rs  bthledef.rs  ws2bth.rs
tests/: structs_x86_64.rs
